<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/question_buy_ticket"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <Button
            android:id="@+id/mButton_Yes"
            android:textColor="#FFFFFF"
            android:background="@drawable/bogoc_background_cam"
            android:text="@string/yes"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_No"
            android:textColor="#FFFFFF"
            android:background="@drawable/bogoc_background_cam"
            android:text="@string/no"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>