<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEFF0"
    tools:context=".MainActivity">
    <include
        layout="@layout/action_bar_log_in" />
    <ImageView

        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/login_app" />

    <LinearLayout
        android:id="@+id/mLinear_Login"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bogoc"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/mEDT_Email_Login"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bogoc1"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/mEDT_Password_Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bogoc1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/mTV_Error_Messenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="email or password incorrect"
            android:textColor="#CC3300"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mBTN_Login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:background="@drawable/bogoc_background_cam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:background="@drawable/bogoc_background_cam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:id="@+id/mBTN_Signin"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mLinear_Authenticate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bogoc"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/Two_Factor_Authentication"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/string_code_2FA"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/string_code_2FA2"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/one_time_password" />
        <TextView
            android:visibility="gone"
            android:id="@+id/mTV_Error_Authorticate"
            android:textSize="12sp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ee0000"
            android:background="#cc9999"
            android:paddingLeft="10dp"
            android:text="@string/error_vaticate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bogoc1"
            android:gravity="center_vertical"
            android:hint="@string/Verification_code"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/mBTN_Authenticate_Success"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="#FF9900"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/authenticate"
            android:textColor="#ffffff" />
    </LinearLayout>
</RelativeLayout>