<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mTV_HOME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/home"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/mTV_LOTTERY_RUSULT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Lottery_Result"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/mTV_TRANSATION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/transaction"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/mTV_mTV_BuyLTR_Token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/buy_LTR_Token"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ln_si_su"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/mTV_SIGN_IN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signin"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/mTV_SIGN_UP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="18sp" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/my_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="My Account"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="ETHER :"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/mTV_Ethereum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="0"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="LTR :"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/mTV_LTR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="0"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>