<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView

            android:src="@drawable/ltr_jackpot"
            android:layout_width="match_parent"
            android:layout_height="125dp" />
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="10 Ngày:10:10:10 Giây"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:text="@string/number"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:text="@string/ticket"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:text="8"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:text="16.000 LTR"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#4987B7"
            android:background="#D9EDF7"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="Total Cost: 20,000 LTR"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:text="@string/transaction"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>