<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout_activity.Buy_Ticket">
    <include
        layout="@layout/action_bar_buy_ticket"
        />
    <LinearLayout
        android:layout_weight="0.95"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:padding="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Mở Thường Ngày 3-8-2018"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="5dp"
                android:layout_weight="0.1"
                android:text="Số lượng LTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/mTV_LTR"
                android:gravity="center_vertical|end"
                android:padding="5dp"
                android:layout_weight="0.1"
                android:text="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Số lượng ETH"
                android:padding="5dp"
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/mTV_ETH"
                android:gravity="center_vertical|end"
                android:padding="5dp"
                android:layout_weight="0.1"
                android:text="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="5dp"
                android:layout_weight="0.1"
                android:text="Giá Vé"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center_vertical|end"
                android:padding="5dp"
                android:layout_weight="0.1"
                android:text="2000 LTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="5dp"
                android:layout_weight="0.1"
                android:text="Tổng"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/mTV_Total"
                android:gravity="center_vertical|end"
                android:padding="5dp"
                android:layout_weight="0.1"
                android:text="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/mEDT_password"
            android:padding="10dp"
            android:hint="@string/password"
            android:gravity="center_vertical"
            android:background="@drawable/bogoc"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/mBTN_BuyTicket"
        android:textColor="#ffffff"
        android:text="@string/Buy_Ticket"
        android:background="@drawable/bogoc_background_cam"
        android:layout_margin="10dp"
        android:layout_weight="0.05"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
</LinearLayout>